--- a/HEAT/galaxy-rna-workbench/playbook.yml
+++ b/HEAT/galaxy-rna-workbench/playbook.yml
@@ -7,6 +7,7 @@
       galaxy_flavor: 'galaxy-TESTING'
       move_datasets: false
       create_bootstrap_user: true
+      galaxy_admin_api_key: 'api_key'
       when: galaxy_flavor != 'galaxy-no-tools'
 
     - role: indigo-dc.galaxycloud-tooldeps
