switch to rna workbench

--- a/HEAT/galaxy-rna-workbench/playbook.yml
+++ b/HEAT/galaxy-rna-workbench/playbook.yml
@@ -4,7 +4,7 @@
   connection: local
   roles:
     - role: indigo-dc.galaxycloud-tools
-      galaxy_flavor: 'galaxy-TESTING'
+      galaxy_flavor: 'galaxy-rna-workbench'
       move_datasets: false
       create_bootstrap_user: true
       when: galaxy_flavor != 'galaxy-no-tools'
